# doodoo-logistics-rust-version

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  ci-local.sh
.sqlx/: query-017237801cc00f8a6d5b3c0d752297860698663bc04926facfb5e62337463ec8.json  query-0ec14f8fd542d8e49dfdeedb59056bac65a0b54dcf43412d3a8700e735e745c3.json  query-1b1c7ec9f735200f672eb3f6fb84ec3befa74d59bf1b70fa48fb1b2cb4f9f3d8.json  query-1c43295c6fe431d19523bc1ef839a9994f79f78b0968519ce2df3f5372c461e3.json  query-31a10928391388c09484033b17bcb07d53171562236a1da790ea9e17d6f49f87.json  query-366f39a7137b4cf4c70dc83088c42b844c26357d7f13f2f16559b9309ba77682.json  query-3735d3b65c7891d23f8ebe849daabce71db73a63c4a62fe822820db148072121.json  query-3751abb995223678a2eeb6227b3caa553138d5d0c2a085740bf6c74908f7cadb.json  query-3afd3d5424dff355ee041363611f345173e6bbd5b633234a2ac45670de297bdc.json  query-3dc632b20138c12e71d002a19d285933e9a323a66bd14fe7a6461af12193fe4f.json  query-414f7ef2223c01b2a983e28669100ed97cd3cbf04c1fa6bd2ed4f25d21fd2bd6.json  query-420ecf602d201e7e30c037640b10a06bba9bc245c665f19149248e22e38ee4f3.json  query-4415e33af3c5f28722ded1bb3b67b2f3d6138b6257183ee353292b115fa70ac7.json  query-4bc19892718ecbbc5e43fe70fbae93633cc7040f36e4c3705230ce0245cf9f83.json  query-6443285bfe20c9a5a286e3d4d9999e146bf8f0c23343a0b3e95882275f303fe0.json  query-644ac3e0a57a14602f1e58e8d846b9a3a3845f3fded183cebf1b40edd7eae238.json  query-65b9e87a1b0020cc6fc22d86d3e9362fe34163a552e95800e3ec6f10ce21ad56.json  query-674cc9de80909e3131b4b21ab3e05a961dabda645f878f628277c4a3239c132f.json  query-692d7fe9a8bd78f76ce97cb81cf030c74e124dd7a8d64aa074a0f1373c9940a8.json  query-6e2332f4e0246ce7c3bcc83116a29bed5b1c92831891995ddd5398d629417005.json  query-73c7b167a1cc2295cf3c0ff1757cec54ff2a362d028244d35bcf11f62ee64f7d.json  query-8165c6f851f2a9e9cbbc9f3754e094c2d0bf0366eb28f559323847c007b45b34.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-8f7e210c9377a4b2ac4a3bcea2923db2e4d6225820d7bf70f490e9cf9837b558.json  query-940dfa5fb2259fdfb3a124f3139dc13dd8992fda9fb8397ed5f05566e64fdae0.json  query-9c283fc5c9889f07928498f11d5f5de1ae555fa9b75679e01a5a1a9e9254f028.json  query-9c6fc87cfe25af0a4bc8068f44880c2b62cf0c2fed6db6f7986091fb78b8ce02.json  query-a30a3b184d3691f2cb6fe5cfe875e048f4e2e2fc5754212b65b734cf5023c104.json  query-ab75fc3bd0d87926db742fb6c941b41b27d3cb8630b6d5afe22b779fbc7026ab.json  query-abac934d0abf880a52338df7541f67b7dd5f477573880184c4446ec0ba8e29dc.json  query-ac7bf705cccdd2c6ccf8808ad39252f8084c63a13a67fc3dedcdb2e4b263b6db.json  query-af2baaf916a6f7f1fb7861228765d6f5294cd949313fb9cd9ff288adce11ee33.json  (+9 more)
migrations/: 20260423122957_shipment.sql  (+3 more)
(+91 files in other folders)
