[package]
name = "doodoo-logistics-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
chrono = "0.4.44"
once_cell = "1.21.4"
serde_json = "1.0.149"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"