[package]
name = "doodoo-logistics-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21.4"
serde_json = "1.0.149"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono","json"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
mockall = "0.12"
web = "0.2.12"
tracing = "0.1"
tracing-subscriber = "0.3"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }
actix-http = "3.12.1"
