[package]
name = "doodoo-logistics-rust"
version = "0.1.0"
edition = "2021"


[dependencies]
# 1. Unify the Async Web Layer
actix-web = "4.9.0"
actix-http = "3.8.0"

# 2. Modernize the Math/Primitive Stack to absorb testcontainer changes
rand = "0.10.1"
getrandom = "0.4.2"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
rust_decimal = { version = "1.42.0", features = ["serde-float", "db-postgres"] }
chrono = { version = "0.4.45", features = ["serde"] }

# 3. Backend Persistent Layer
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono", "json", "rust_decimal"] }

# 4. Core System Utilities
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dotenvy = "0.15"
async-trait = "0.1"
web = "0.2.12"

# 5. Observability & Testing
tracing = "0.1"
tracing-subscriber = "0.3"
mockall = "0.12"
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.3.7", features = ["postgres"] }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked" # Keeps duplicate intermediate objects separated, eliminating link step thrashing

[profile.release]
opt-level = 3
lto = "thin"                # Seamlessly optimizes and blends duplicate blocks across files
codegen-units = 1           # Gives LLVM full context to strip redundant code paths
panic = "abort"             # Drops stack unwinding code, dramatically shrinking runtime footprint